--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -223,6 +223,19 @@ header>h2 {
   border-radius: 5px;
 }
 
+@media only screen and (max-width: 750px){
+  .header-body {
+    display: flex;
+  	flex-direction: column;
+  	justify-content: center;
+    align-items: center;
+    background-color: rgba(231, 231, 243, 0.699);
+    height: 55%;
+    width: 85%;
+    border-radius: 5px;
+  }
+}
+
 .search-button {
   display: flex;
 	flex-direction: row;
