--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -351,18 +351,23 @@ header>h2 {
  width: 75%;
 }
 
-@media only screen and (max-width: 1245px) {
+@media only screen and (max-width: 750px) {
   .show-profile {
    margin-top: 10%;
-   /*margin-right: 15em;*/
+   margin-left: 20%;
    display: flex;
    flex-direction: row;
-   justify-content: flex-end;
+   justify-content: center;
    height: 100%;
    width: 100%;
   }
 
+  .profile-links {
+    margin-top: 10%;
+  }
+
 .show-image.gridCentered {
+  margin-top: 20%;
     height: 280px;
     width: 350px;
     margin-left: 30px;
